valjda je popravljeno sve u vezi sa mrezom